--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <outputFile>D:\VikingCraft\plugins\VikingCraft.jar</outputFile>
+                            <outputFile>D:\Intellij Projects\VikingCraft\VikingCraft.jar</outputFile>
                         </configuration>
                     </execution>
                 </executions>
@@ -72,6 +73,20 @@
             <artifactId>paper-api</artifactId>
             <version>1.17.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>vikingcraft</groupId>
+            <artifactId>VikingUtils</artifactId>
+            <scope>system</scope>
+            <version>1.0</version>
+            <systemPath>D:/VikingCraft/plugins/VikingUtils.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>vikingcraft</groupId>
+            <artifactId>VikingCurrency</artifactId>
+            <scope>system</scope>
+            <version>1.0</version>
+            <systemPath>D:/Intellij Projects/VikingCurrency/VikingCurrency.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
